# OSINT_APP

./: .env  BUG_FIXES_AND_TEST_SUMMARY.md  EXPRESS_BACKEND_COMPATIBILITY_IMPROVEMENTS.md  EXPRESS_BACKEND_FINAL_SUMMARY.md  GEMINI.md  INTEGRATED_IMPROVEMENT_SUGGESTIONS.md  README.md  improvement_suggestions.md  package-lock.json
.github/: copilot-instructions.md
express-backend/: .env.example  .eslintrc.json  README.md  database.js  osint_database.sqlite-shm  osint_database.sqlite-wal  package-lock.json  package.json  server.js  test_api_database.sqlite-shm  test_api_database.sqlite-wal  test_database.sqlite-shm  test_database.sqlite-wal
express-backend/api/: routes.js
express-backend/scripts/: migrate-db.js
express-backend/tests/integration/: api.test.js
express-backend/tests/unit/: database.test.js
fastapi-ai-worker/: .coverage  .env.example  README.md  TESTING_SUMMARY.md  coverage.xml  pyproject.toml  test_all_mcps.py  test_basic_frontend.py  test_enhanced_agent.py  test_enhanced_mcps.py  test_enhanced_report.py  test_enhanced_search.py  test_frontend_integration.py
fastapi-ai-worker/app/: agent.py  agent_memory.py  conversation_memory.py  enhanced_agent.py.backup  enhanced_agent_state.py  enhanced_agent_wrapper.py  enhanced_api.py  langfuse_tracker.py  llm_selector.py  main.py  mcp.py  mcps.py  vector_memory.py
frontend/: index.html
frontend/static/: script.js  style.css
